tests/machine/x/c/tail_recursion.error
line: 0
error: output mismatch
-- got --
6.952907231017916e-310
-- want --
55
   1: #include <stdio.h>
